--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,27 @@
     <script src="assets/js/sparklines.js"></script>
     <script src="assets/js/charts.js"></script>
     <script src="assets/js/jquery.slimscroll.min.js"></script>
+    
+     <!--custom checkbox & radio-->
+  <script type="text/javascript" src="assets/js/ga.js"></script>
+  <!--custom switch-->
+  <script src="assets/js/bootstrap-switch.js"></script>
+  <!--custom tagsinput-->
+  <script src="assets/js/jquery.tagsinput.js"></script>
+
+  <!-- colorpicker -->
+
+  <!-- bootstrap-wysiwyg -->
+  <script src="assets/js/jquery.hotkeys.js"></script>
+  <script src="assets/js/bootstrap-wysiwyg.js"></script>
+  <script src="assets/js/bootstrap-wysiwyg-custom.js"></script>
+  <script src="assets/js/moment.js"></script>
+  <script src="assets/js/bootstrap-colorpicker.js"></script>
+  <script src="assets/js/daterangepicker.js"></script>
+  <script src="assets/js/bootstrap-datepicker.js"></script>
+  <!-- ck editor -->
+  <script type="text/javascript" src="assets/ckeditor/ckeditor.js"></script>
+  <!-- custom form component script for this page-->
 </head>
 <body>
   <app-root></app-root>
